[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notafter"
version = "0.1.0"
description = "PKI certificate auditor with PQC readiness scoring"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Fred Kawooya" },
]
keywords = ["pki", "tls", "ssl", "certificate", "pqc", "quantum", "security", "audit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "cryptography>=42.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
lint = [
    "pkilint>=0.10",
]

[project.scripts]
notafter = "notafter.cli:cli"

[project.urls]
Homepage = "https://github.com/FKawooya/NotAfter"
Repository = "https://github.com/FKawooya/NotAfter"
Issues = "https://github.com/FKawooya/NotAfter/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
